kustomize/overlays/prod/service_patch.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: specify-app-service
spec:
  selector:
    app: specify-app-deployment
    variant: prod

---
apiVersion: v1
kind: Service
metadata:
  name: redis-service
spec:
  selector:
    app: redis-deployment
    variant: prod

---
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-deployment
    variant: prod

---
apiVersion: v1
kind: Service
metadata:
  name: asset-server-service
spec:
  selector:
    app: asset-server-deployment
    variant: prod

---
apiVersion: v1
kind: Service
metadata:
  name: report-runner-service
spec:
  selector:
    app: report-runner-deployment
    variant: prod
